fix Sonar issues; use virtual threads